--- a/public/views/SignUp.html
+++ b/public/views/SignUp.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/main.css" />
     <script src="../js/main.js"></script>
+    <script src="../js/signUp.js"></script>
     <title> PHER Sign Up</title>
 </head>
 
@@ -22,7 +23,7 @@
                         Sign Up For Your PHER
                     </div>
                     <div class="card-body" style="background-color: #ff6666; color:white">
-                        <form action="index.html">
+                        <form id="signupForm">
                             <div class="mb-3">
                                 <label for="username" class="form-label">Username:</label>
                                 <input type="text" class="form-control" id="username" placeholder="Enter Username">
