--- a/public/views/LogIn.html
+++ b/public/views/LogIn.html
@@ -6,46 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <script src="../js/main.js"></script>
+
     <title>Log In</title>
 </head>
+
 <body>
     <header class="mb-4 pt-4 pb-4">
         <h1>Patient Log In</h1>
     </header>
     <main>
-    <div class="row">
-        <div class="col-md-4 col-sm-12 mx-auto">
-            <div class="card mt-4">
-                <div class="card-header" style="background-color: #8b0000; color: white;">
-                    Log In
-                </div>
-                <div class="card-body" style="background-color: #ff6666; color:white">
-                    <form action="index.html">
-                        <div class="mb-3">
-                            <label for="username" class="form-label">Username:</label>
-                            <input type="text" class="form-control" id="username" placeholder="Enter Username">
-                        </div>
-                        <div class="mb-3">
-                            <label for="pwd" class="form-label">Password:</label>
-                            <input type="password" class="form-control" id="pwd" placeholder="Enter password">
-                        </div>
-                        <div class="form-check mb-3">
+        <div class="row">
+            <div class="col-md-4 col-sm-12 mx-auto">
+                <div class="card mt-4">
+                    <div class="card-header" style="background-color: #8b0000; color: white;">
+                        Log In
+                    </div>
+                    <div class="card-body" style="background-color: #ff6666; color:white">
+                        <form id="loginForm">
                             <div class="mb-3">
-                                <label class="form-check-label">
-                                    <input class="form-check-input" type="checkbox" name="remember"> Remember me
-                                </label>
+                                <label for="username" class="form-label">Username:</label>
+                                <input type="text" class="form-control" id="username" placeholder="Enter Username" required>
                             </div>
+                            <div class="mb-3">
+                                <label for="pwd" class="form-label">Password:</label>
+                                <input type="password" class="form-control" id="pwd" placeholder="Enter password" required>
+                            </div>
+                            <div class="form-check mb-3">
+                                <div class="mb-3">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="checkbox" name="remember"> Remember me
+                                    </label>
+                                </div>
                                 Forgot Password? <a href="ResetPassword.html">Reset Password</a>
-                        </div>
-                        <button type="submit" class="btn" style="background-color: #8b0000; color: white;">Log In</button>
-                    </form>
+                            </div>
+                            <button type="submit" class="btn" style="background-color: #8b0000; color: white;">Log In</button>
+                        </form>
+                        <div id="loginError" class="text-danger mt-3" style="display: none;"></div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     </main>
-<footer><a href="contactus.html">Contact Us</a></footer>
+    <footer><a href="contactus.html">Contact Us</a></footer>
+    <script src="../js/main.js"></script>
+    <script src="../js/login.js"></script>
 
 </body>
 
