Added link to sign up page from login screen

--- a/public/views/LogIn.html
+++ b/public/views/LogIn.html
@@ -25,11 +25,13 @@
                         <form id="loginForm">
                             <div class="mb-3">
                                 <label for="username" class="form-label">Username:</label>
-                                <input type="text" class="form-control" id="username" placeholder="Enter Username" required>
+                                <input type="text" class="form-control" id="username" placeholder="Enter Username"
+                                    required>
                             </div>
                             <div class="mb-3">
                                 <label for="pwd" class="form-label">Password:</label>
-                                <input type="password" class="form-control" id="pwd" placeholder="Enter password" required>
+                                <input type="password" class="form-control" id="pwd" placeholder="Enter password"
+                                    required>
                             </div>
                             <div class="form-check mb-3">
                                 <div class="mb-3">
@@ -37,9 +39,13 @@
                                         <input class="form-check-input" type="checkbox" name="remember"> Remember me
                                     </label>
                                 </div>
-                                Forgot Password? <a href="ResetPassword.html">Reset Password</a>
+                                Forgot Password? <a href="ResetPassword.html">Reset Password</a></br>
+                                <div class="mt-3">
+                                    Need to Register for an Account? <a href="SignUp.html">Sign Up</a>
+                                </div>
                             </div>
-                            <button type="submit" class="btn" style="background-color: #8b0000; color: white;">Log In</button>
+                            <button type="submit" class="btn" style="background-color: #8b0000; color: white;">Log
+                                In</button>
                         </form>
                         <div id="loginError" class="text-danger mt-3" style="display: none;"></div>
                     </div>
