--- a/public/views/Medications.html
+++ b/public/views/Medications.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <script src="../js/main.js"></script>
-
     <title>Medications</title>
 </head>
 
@@ -33,23 +31,23 @@
                     </div>
                     <div class="card-body" style="background-color: #ff6666; color:white;">
 
-                        <form method="get">
+                        <form id="addMedForm" method="post">
                             <div class="mb-3">
                                 <label for="startDate" class="form-label">Start Date:</label>
-                                <input type="date" class="form-control" name="startDate" id="startDate">
+                                <input type="date" class="form-control" name="start_date" id="startDate">
                             </div>
                             <div class="mb-3">
                                 <label for="endDate" class="form-label">End Date:</label>
-                                <input type="date" class="form-control" name="endDate" id="endDate">
+                                <input type="date" class="form-control" name="end_date" id="endDate">
                             </div>
                             <div class="mb-3">
                                 <label for="prescriber" class="form-label">Prescriber:</label>
-                                <input type="text" class="form-control" name="Prescriber" id="Prescriber"
+                                <input type="text" class="form-control" name="prescriber" id="Prescriber"
                                     placeholder="Who Prescribed The Medication">
                             </div>
                             <div class="mb-3">
                                 <label for="medication" class="form-label">Medication:</label>
-                                <input type="text" class="form-control" name="medication" id="medication"
+                                <input type="text" class="form-control" name="med_name" id="medication"
                                     placeholder="Medication Name">
                             </div>
                             <div class="mb-3">
@@ -58,8 +56,8 @@
                                     placeholder="Number of Pills">
                             </div>
                             <div class="mb-3">
-                                <label for="quantityUnits" class="form-label">Units:</label>
-                                <input type="text" class="form-control" name="quantityUnits" id="quantityUnits"
+                                <label for="units" class="form-label">Units:</label>
+                                <input type="text" class="form-control" name="units" id="units"
                                     placeholder="10 mg, 100 mcg, etc...">
                             </div>
                             <div class="mb-3">
@@ -69,7 +67,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="sideEffects" class="form-label">Side Effects:</label>
-                                <textarea name="sideEffects" class="form-control" id="sideEffects"
+                                <textarea name="comments" class="form-control" id="sideEffects"
                                     placeholder="Dizziness, Headaches, etc..."></textarea>
                             </div>
                             <button id="userSubmit" class="btn" type="submit"
@@ -83,5 +81,6 @@
     <footer><a href="contactus.html">Contact Us</a></footer>
 
 </body>
-
+<script src="../js/main.js"></script>
+<script src="../js/medications/addMedication.js"></script>
 </html>
