--- a/public/views/index.html
+++ b/public/views/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="wrapper">
         <header>
-          <h1>Personal Health Electronic Record</h1>
+          <h1><a href="index.html" id="logo">Personal Health Electronic Record</a></h1>
         </header>  
         <nav>
           <ul>
@@ -23,7 +23,7 @@
          </nav>
           <main>   
           <h2>Manage your personal health record!</h2>
-          <p>Type something here </p>
+          <a href="Login.html" class="loginBtn">Log In/Sign Up</a>
          </main> 
          <footer><a href="contactus.html">Contact Us</a></footer>
       </div>
