Fixed typo in href link to LogIn page.

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -23,7 +23,7 @@
          </nav>
           <main>   
           <h2>Manage your personal health record!</h2>
-          <a href="Login.html" class="loginBtn">Log In/Sign Up</a>
+          <a href="LogIn.html" class="loginBtn">Log In/Sign Up</a>
          </main> 
          <footer><a href="contactus.html">Contact Us</a></footer>
       </div>
