--- a/public/css/main.css
+++ b/public/css/main.css
@@ -164,3 +164,13 @@
 .loginBtn:hover {
     background-color: #0056b3;
 }
+
+th{
+    background-color: #8b0000 !important;
+    color: white !important;
+}
+
+/* td{
+    background-color: #ff6666 !important;
+    color: white !important;
+} */
