--- a/public/views/Activities.html
+++ b/public/views/Activities.html
@@ -23,7 +23,20 @@
     </nav>
     <main>
         <div class="row">
-
+            <div class="col-md-4 col-sm-12 mx-auto">
+                <table class="table table-striped table-hover">
+                    <thead >
+                        <tr>
+                            <th>Date</th>
+                            <th>Duration</th>
+                            <th>Description</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tableBody">
+                        <!--Dynamic Data Goes Here-->
+                    </tbody>
+                </table>
+            </div>
             <div class="col-md-4 col-sm-12 mx-auto">
                 <div class="card">
                     <div class="card-header" style="background-color: #8b0000; color: white;">
@@ -38,7 +51,7 @@
                             <div class="mb-3">
                                 <label for="activityDuration" class="form-label">Duration:</label>
                                 <input type="text" class="form-control" name="activityDuration" id="activityDuration"
-                                    placeholder="Roughly How Long the Activity Lasted In Minutes">
+                                    placeholder="Activity Length In Minutes">
                             </div>
                             <div class="mb-3">
                                 <label for="activityDescription" class="form-label">Description:</label>
@@ -58,4 +71,5 @@
 </body>
 <script src="../js/main.js"></script>
 <script src="../js/activities/addActivity.js"></script>
+<script src="../js/activities/getUserAct.js"></script>
 </html>
