--- a/public/views/Appointments.html
+++ b/public/views/Appointments.html
@@ -23,7 +23,23 @@
     </nav>
     <main>
         <div class="row">
-
+            <div class="col-md-6 col-sm-12 mx-auto">
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Title</th>
+                            <th>Provider</th>
+                            <th>Purpose</th>
+                            <th>Phone</th>
+                            <th>Email</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tableBody">
+                        <!--Dynamic Data Goes Here-->
+                    </tbody>
+                </table>
+            </div>
             <div class="col-md-4 col-sm-12 mx-auto">
                 <div class="card">
                     <div class="card-header" style="background-color: #8b0000; color: white;">
@@ -42,13 +58,13 @@
                             </div>
                             <div class="mb-3">
                                 <label for="medicalProfessional" class="form-label">Provider Name:</label>
-                                <input type="text" class="form-control" name="provider_name"
-                                    id="medicalProfessional" placeholder="Name of Physician">
+                                <input type="text" class="form-control" name="provider_name" id="medicalProfessional"
+                                    placeholder="Name of Physician">
                             </div>
                             <div class="mb-3">
                                 <label for="appointmentPurpose" class="form-label">Purpose: </label>
-                                <input type="text" class="form-control" name="purpose"
-                                    id="appointmentPurpose" placeholder="Checkup, Vaccination, etc...">
+                                <input type="text" class="form-control" name="purpose" id="appointmentPurpose"
+                                    placeholder="Checkup, Vaccination, etc...">
                             </div>
                             <div class="mb-3">
                                 <label for="phoneNumber" class="form-label">Phone number:</label>
@@ -75,5 +91,7 @@
 <footer><a href="contactus.html">Contact Us</a></footer>
 <script src="../js/main.js"></script>
 <script src="../js/appointments/addAppointment.js"></script>
+<script src="../js/appointments/getUserApps.js"></script>
+
 
 </html>
