--- a/public/views/Activities.html
+++ b/public/views/Activities.html
@@ -30,6 +30,7 @@
                             <th>Date</th>
                             <th>Duration</th>
                             <th>Description</th>
+                            <th>Delete </th>
                         </tr>
                     </thead>
                     <tbody id="tableBody">
@@ -72,4 +73,5 @@
 <script src="../js/main.js"></script>
 <script src="../js/activities/addActivity.js"></script>
 <script src="../js/activities/getUserAct.js"></script>
+<script src="../js/activities/deleteActivity.js"></script>
 </html>
