--- a/public/views/Activities.html
+++ b/public/views/Activities.html
@@ -25,12 +25,12 @@
         <div class="row">
             <div class="col-md-4 col-sm-12 mx-auto">
                 <table class="table table-striped table-hover">
-                    <thead >
+                    <thead>
                         <tr>
                             <th>Date</th>
                             <th>Duration</th>
                             <th>Description</th>
-                            <th>Delete </th>
+                            <th>Delete/Edit</th>
                         </tr>
                     </thead>
                     <tbody id="tableBody">
@@ -44,7 +44,7 @@
                         Add Activity
                     </div>
                     <div class="card-body" style="background-color: #ff6666; color:white;">
-                        <form id="addActForm" method="get">
+                        <form id="addActForm" method="post">
                             <div class="mb-3">
                                 <label for="activityDate" class="form-label">Date:</label>
                                 <input type="date" class="form-control" name="act_date" id="activityDate">
@@ -56,8 +56,8 @@
                             </div>
                             <div class="mb-3">
                                 <label for="activityDescription" class="form-label">Description:</label>
-                                <input type="text" class="form-control" name="comments"
-                                    id="activityDescription" placeholder="Lifted at the Gym, Went on a Run, etc...">
+                                <input type="text" class="form-control" name="comments" id="activityDescription"
+                                    placeholder="Lifted at the Gym, Went on a Run, etc...">
                             </div>
                             <button id="userSubmit" class="btn" type="submit"
                                 style="background-color: #8b0000; color: white;">Submit</button>
@@ -67,6 +67,38 @@
             </div>
         </div>
 
+
+        <!-- Edit Modal -->
+        <div class="modal fade pt-5" id="editModal" tabindex="-1" aria-hidden="true" >
+            <div class="modal-dialog" style="background-color: #ff6666; color:white;">
+                <form class="modal-content" id="editForm" method="post">
+                    <div class="modal-header" style="background-color: #8b0000; color: white;">
+                        <h5 class="modal-title">Edit Activity</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body" style="background-color: #ff6666; color:white;">
+                        <input type="hidden" id="editId">
+                        <div class="mb-3">
+                            <label for="editDate" class="form-label">Date</label>
+                            <input type="date" class="form-control" id="editDate" name="act_date" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editDuration" class="form-label">Duration</label>
+                            <input type="number" class="form-control" id="editDuration" name="duration" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editDescription" class="form-label">Description</label>
+                            <input type="text" class="form-control" id="editDescription" name="comments" required>
+                        </div>
+                    </div>
+                    <div class="modal-footer mx-auto">
+                        <button type="submit" class="btn" style="background-color: #8b0000; color: white;">Save changes</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+
     </main>
     <footer><a href="contactus.html">Contact Us</a></footer>
 </body>
@@ -74,4 +106,7 @@
 <script src="../js/activities/addActivity.js"></script>
 <script src="../js/activities/getUserAct.js"></script>
 <script src="../js/activities/deleteActivity.js"></script>
+<script src="../js/activities/updateActivity.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
