--- a/public/views/Medications.html
+++ b/public/views/Medications.html
@@ -23,7 +23,7 @@
     </nav>
     <main>
         <div class="row">
-            <div class="col-md-4 col-sm-12 mx-auto">
+            <div class="col-md-6 col-sm-12 mx-auto">
                 <table class="table table-striped table-hover">
                     <thead >
                         <tr>
@@ -34,7 +34,8 @@
                             <th>Quantity</th>
                             <th>Units</th>
                             <th>Frequency</th>
-                            <th>Delete?</th>
+                            <th>Side Effects</th>
+                            <th>Delete/Edit</th>
                         </tr>
                     </thead>
                     <tbody id="tableBody">
@@ -94,6 +95,59 @@
                     </div>
                 </div>
             </div>
+
+
+
+                    <!-- Edit Modal -->
+        <div class="modal fade pt-5" id="editModal" tabindex="-1" aria-hidden="true" >
+            <div class="modal-dialog" style="background-color: #ff6666; color:white;">
+                <form class="modal-content" id="editForm">
+                    <div class="modal-header" style="background-color: #8b0000; color: white;">
+                        <h5 class="modal-title">Edit Activity</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body" style="background-color: #ff6666; color:white;">
+                        <input type="hidden" id="editId">
+                        <div class="mb-3">
+                            <label for="editStart_Date" class="form-label">Start Date</label>
+                            <input type="date" class="form-control" id="editStart_Date" name="start_date" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editEnd_Date" class="form-label">End Date</label>
+                            <input type="date" class="form-control" id="editEnd_Date" name="end_date">
+                        </div>
+                        <div class="mb-3">
+                            <label for="editPresc" class="form-label">Prescriber</label>
+                            <input type="text" class="form-control" id="editPresc" name="prescriber" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editMed" class="form-label">Medication</label>
+                            <input type="text" class="form-control" id="editMed" name="med_name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editQuantity" class="form-label">Quantity</label>
+                            <input type="text" class="form-control" id="editQuantity" name="quantity" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editUnits" class="form-label">Units</label>
+                            <input type="text" class="form-control" id="editUnits" name="units" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editFrequency" class="form-label">Frequency</label>
+                            <input type="text" class="form-control" id="editFrequency" name="frequency" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="editComments" class="form-label">Side Effects</label>
+                            <input type="text" class="form-control" id="editComments" name="comments" required>
+                        </div>
+                    </div>
+                    <div class="modal-footer mx-auto">
+                        <button type="submit" class="btn" style="background-color: #8b0000; color: white;">Save changes</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
     </main>
 
     <footer><a href="contactus.html">Contact Us</a></footer>
@@ -103,4 +157,7 @@
 <script src="../js/medications/addMedication.js"></script>
 <script src="../js/medications/getUserMed.js"></script>
 <script src="../js/medications/deleteMedication.js"></script>
+<script src="../js/medications/updateMedication.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
