--- a/public/views/Appointments.html
+++ b/public/views/Appointments.html
@@ -26,22 +26,6 @@
     <main>
         <div class="row">
             <div class="col-md-6 col-sm-12 mx-auto">
-                <!-- <table class="table table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th>Date</th>
-                            <th>Title</th>
-                            <th>Provider</th>
-                            <th>Purpose</th>
-                            <th>Phone</th>
-                            <th>Email</th>
-                            <th>Delete/Edit</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tableBody">
-                        Dynamic Data Goes Here
-                    </tbody>
-                </table> -->
                 <div id="calendar" class="mb-5">
                     <!-- Dynamic Data Goes Here -->
                 </div>
@@ -151,7 +135,54 @@
                     <p><strong>Phone Number:</strong> <span id="eventPhone"></span></p>
                     <p><strong>Email:</strong> <span id="eventEmail"></span></p>
                 </div>
+                <div class="modal-footer mx-auto">
+                    <button type="button" class="btn" style="background-color: #8b0000; color: white;" id="editAppBtn">
+                        Edit Appointment
+                    </button>
+                    <button id="deleteAppBtn" class="btn btn-danger">Delete Appointment</button>
+                </div>
             </div>
+        </div>
+    </div>
+
+    <div class="modal fade pt-5" id="appEditModal" tabindex="-1" aria-hidden="true" >
+        <div class="modal-dialog" style="background-color: #ff6666; color:white;">
+            <form class="modal-content" id="appEditForm">
+                <div class="modal-header" style="background-color: #8b0000; color: white;">
+                    <h5 class="modal-title">Edit Appointment</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" style="background-color: #ff6666; color:white;">
+                    <input type="hidden" id="editId">
+                    <div class="mb-3">
+                        <label for="editDate" class="form-label">Date:</label>
+                        <input type="date" class="form-control" id="editDate" name="app_date" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="editMedical_Title" class="form-label">Medical Title:</label>
+                        <input type="text" class="form-control" id="editMedical_Title" name="medical_title">
+                    </div>
+                    <div class="mb-3">
+                        <label for="editProvider" class="form-label">Provider:</label>
+                        <input type="text" class="form-control" id="editProvider" name="provider_name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="editPurpose" class="form-label">Purpose:</label>
+                        <input type="text" class="form-control" id="editPurpose" name="purpose" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="editPhone" class="form-label">Phone Number:</label>
+                        <input type="text" class="form-control" id="editPhone" name="phone_number" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="editEmail" class="form-label">Email:</label>
+                        <input type="text" class="form-control" id="editEmail" name="provider_email" required>
+                    </div>
+                </div>
+                <div class="modal-footer mx-auto">
+                    <button type="submit" class="btn" style="background-color: #8b0000; color: white;">Save changes</button>
+                </div>
+            </form>
         </div>
     </div>
 </body>
