updated Patient and Provider dashboards

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSCI 441 Spring 2025 Project</title>
+    <title>PHER Patient Dashboard</title>
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/main.css" />
     <script src="../js/main.js"></script>
@@ -21,10 +21,17 @@
            <li><a href="Medications.html">Medications</a></li>
           </ul> 
          </nav>
-          <main>   
-          <h2>Manage your personal health record!</h2>
-          <a href="LogIn.html" class="loginBtn">Log In/Sign Up</a>
-         </main> 
+         <main>
+          <h2>Patient Dashboard</h2>
+          <div>
+              <div>
+                  <div>
+                      <input type="text" class="form-control" name = "providerSearch" id = "providerSearch" placeholder="Search providers">
+                  </div>
+                  <p>No providers yet.</p>        
+              </div>
+          </div>
+      </main>
          <footer><a href="contactus.html">Contact Us</a></footer>
       </div>
 </body>
