--- a/public/views/ResetPassword.html
+++ b/public/views/ResetPassword.html
@@ -2,45 +2,50 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../css/main.css" />
-    <script src="../js/main.js"></script>
-    <title>Reset Password</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../css/main.css" />
+  <title>Reset Password</title>
 </head>
-<body>
-    <header class="mb-4 pt-4 pb-4">
-        <h1></h1>
-    </header>
-    <main>
-    <div class="row">
-        
-        <div class="col-md-4 col-sm-12 mx-auto">
-            <div class="card mt-4">
-                <div class="card-header" style="background-color: #8b0000; color: white;">
-                    Reset Password
-                </div>
-                <div class="card-body" style="background-color: #ff6666; color:white">
-                    <form action="LogIn.html">
-                        <div class="mb-3">
-                            <label for="pwd" class="form-label" >New Password:</label>
-                            <input type="password" class="form-control" id="pwd" placeholder="Enter Password">
-                        </div>
-                        <div class="mb-3">
-                            <label for="confirmPass" class="form-label"> Confirm Password:</label>
-                            <input type="password" class="form-control" id="confirmPass" placeholder="Confirm Password">
-                        </div>
-                        <button type="submit" class="btn" style="background-color: #8b0000; color: white;">Reset Password</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-        
-    </div>
-    </main>
-<footer><a href="contactus.html">Contact Us</a></footer>
 
+<body>
+  <header class="mb-4 pt-4 pb-4">
+    <h1>Reset Password</h1>
+  </header>
+
+  <main>
+    <div class="row">
+      <div class="col-md-4 col-sm-12 mx-auto">
+        <div class="card mt-4">
+          <div class="card-header" style="background-color: #8b0000; color: white;">
+            Reset Password
+          </div>
+          <div class="card-body" style="background-color: #ff6666; color:white">
+            <form id="resetPasswordForm">
+              <div class="mb-3">
+                <label for="username" class="form-label">Username:</label>
+                <input type="text" class="form-control" id="username" placeholder="Enter your username" required />
+              </div>
+              <div class="mb-3">
+                <label for="pwd" class="form-label">New Password:</label>
+                <input type="password" class="form-control" id="pwd" placeholder="Enter Password" required />
+              </div>
+              <div class="mb-3">
+                <label for="confirmPass" class="form-label">Confirm Password:</label>
+                <input type="password" class="form-control" id="confirmPass" placeholder="Confirm Password" required />
+              </div>
+              <button type="submit" class="btn" style="background-color: #8b0000; color: white;">Reset Password</button>
+            </form>
+            <div id="resetMessage" class="mt-3"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer><a href="contactus.html">Contact Us</a></footer>
+  <script src="../js/resetPassword.js"></script>
 </body>
 
 </html>
