--- a/public/views/LogIn.html
+++ b/public/views/LogIn.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="mb-4 pt-4 pb-4">
-        <h1>Patient Log In</h1>
+        <h1>Log In</h1>
     </header>
     <main>
         <div class="row">
