Implemented recored sharing.

--- a/public/views/Activities.html
+++ b/public/views/Activities.html
@@ -51,7 +51,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="activityDuration" class="form-label">Duration:</label>
-                                <input type="text" class="form-control" name="activityDuration" id="activityDuration"
+                                <input type="number" class="form-control" name="activityDuration" id="activityDuration"
                                     placeholder="Activity Length In Minutes">
                             </div>
                             <div class="mb-3">
