--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,38 +1,81 @@
 <!DOCTYPE html>
 <html class="indexHtml" lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PHER Patient Dashboard</title>
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <script src="../js/main.js"></script>
 </head>
+
 <body>
     <div id="wrapper">
         <header>
-          <h1><a href="index.html" id="logo">Personal Health Electronic Record</a></h1>
-        </header>  
+            <h1><a href="index.html" id="logo">Personal Health Electronic Record</a></h1>
+        </header>
         <nav>
-          <ul>
-           <li><a href="index.html" class="active">Home</a></li>
-           <li><a href="Appointments.html">Appointments</a></li>
-           <li><a href="Activities.html">Activities</a></li>
-           <li><a href="Medications.html">Medications</a></li>
-          </ul> 
-         </nav>
-         <main>
-          <h2>Patient Dashboard</h2>
-          <div>
-              <div>
-                  <div>
-                      <input type="text" class="form-control" name = "providerSearch" id = "providerSearch" placeholder="Search providers">
-                  </div>
-                  <p>No providers yet.</p>        
-              </div>
-          </div>
-      </main>
-         <footer><a href="contactus.html">Contact Us</a></footer>
-      </div>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="Appointments.html">Appointments</a></li>
+                <li><a href="Activities.html">Activities</a></li>
+                <li><a href="Medications.html">Medications</a></li>
+            </ul>
+        </nav>
+        <main>
+            <h2>Patient Dashboard</h2>
+            <div class="row">
+                <div class="col-md-4 col-sm-12 mx-auto">
+                    <div id="calendar" class="mb-5">
+                        <!-- Dynamic Data Goes Here -->
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 mx-auto">
+                    <div class="card">
+                        <div class="card-header" style="background-color: #8b0000; color: white;">
+                            Pending Requests
+                        </div>
+                        <div class="card-body" style="background-color: #ff6666; color:white;">
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>Provider Name</th>
+                                        <th>Accept / Decline</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tableBody">
+                                    <!--Dynamic Data Goes Here-->
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="card mt-3">
+                        <div class="card-header" style="background-color: #8b0000; color: white;">
+                            Actively Sharing
+                        </div>
+                        <div class="card-body" style="background-color: #ff6666; color:white;">
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>Provider Name</th>
+                                        <th>Stop Sharing</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="accpetedBody">
+                                    <!--Dynamic Data Goes Here-->
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
 </body>
+<footer><a href="contactus.html">Contact Us</a></footer>
+<script src="../js/main.js"></script>
+<script src="../js/requests/patient/requestDecision.js"></script>
+<script src="../js/appointments/getUserApps.js"></script>
+<script src="../js/requests/patient/activeRequest.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.js"></script>
+
 </html>
