--- a/public/views/Medications.html
+++ b/public/views/Medications.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="mb-4 pt-4 pb-4">
+    <header>
         <h1>Medications</h1>
     </header>
     <nav>
@@ -19,6 +19,7 @@
             <li><a href="Appointments.html">Appointments</a></li>
             <li><a href="Activities.html">Activities</a></li>
             <li><a href="Medications.html" class="active">Medications</a></li>
+            <button id="logoutBtn">Log Out</button>
         </ul>
     </nav>
     <main>
@@ -154,6 +155,7 @@
 
 </body>
 <script src="../js/main.js"></script>
+<script src="../js/logout.js"></script>
 <script src="../js/medications/addMedication.js"></script>
 <script src="../js/medications/getUserMed.js"></script>
 <script src="../js/medications/deleteMedication.js"></script>
