--- a/public/views/ResetPassword.html
+++ b/public/views/ResetPassword.html
@@ -47,5 +47,5 @@
   <footer><a href="contactus.html">Contact Us</a></footer>
   <script src="../js/resetPassword.js"></script>
 </body>
-
+<script src="../js/logout.js"></script>
 </html>
