--- a/public/views/contactus.html
+++ b/public/views/contactus.html
@@ -18,6 +18,7 @@
             <li><a href="Appointments.html">Appointments</a></li>
             <li><a href="Activities.html">Activities</a></li>
             <li><a href="Medications.html">Medications</a></li>
+            <button id="logoutBtn">Log Out</button>
         </ul> 
     </nav>
     <main>
@@ -37,4 +38,5 @@
     </main>
     <footer><a href="contactus.html">Contact Us</a></footer>
 </body>
+<script src="../js/logout.js"></script>
 </html>
