--- a/public/views/index.html
+++ b/public/views/index.html
@@ -20,6 +20,7 @@
                 <li><a href="Appointments.html">Appointments</a></li>
                 <li><a href="Activities.html">Activities</a></li>
                 <li><a href="Medications.html">Medications</a></li>
+                <button id="logoutBtn">Log Out</button>
             </ul>
         </nav>
         <main>
@@ -73,6 +74,7 @@
 </body>
 <footer><a href="contactus.html">Contact Us</a></footer>
 <script src="../js/main.js"></script>
+<script src="../js/logout.js"></script>
 <script src="../js/requests/patient/requestDecision.js"></script>
 <script src="../js/appointments/getUserApps.js"></script>
 <script src="../js/requests/patient/activeRequest.js"></script>
