--- a/public/views/providerDashboard.html
+++ b/public/views/providerDashboard.html
@@ -14,6 +14,12 @@
         <header>
             <h1>Personal Health Electronic Record</h1>
         </header>
+        <nav>
+            <ul>
+                <li><a href="providerDashboard.html" class="active">Home</a></li>
+                <button id="logoutBtn" style="display: none;">Log Out</button>
+            </ul>
+        </nav>
         <main>
             <h2>Provider Dashboard</h2>
             <div class="row">
@@ -125,6 +131,7 @@
 
     <!-- <script src="../js/providerSearch.js"></script> -->
     <script src="../js/main.js"></script>
+    <script src="../js/logout.js"></script>
     <script src="../js/requests/provider/getMedications.js"></script>
     <script src="../js/requests/provider/getAppointments.js"></script>
     <script src="../js/requests/provider/getActivities.js"></script>
