--- a/public/views/Activities.html
+++ b/public/views/Activities.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="mb-4 pt-4 pb-4">
+    <header >
         <h1>Activities</h1>
     </header>
     <nav>
@@ -19,6 +19,7 @@
             <li><a href="Appointments.html">Appointments</a></li>
             <li><a href="Activities.html" class="active">Activities</a></li>
             <li><a href="Medications.html">Medications</a></li>
+            <li><button id="logoutBtn">Log Out</button></li>
         </ul>
     </nav>
     <main>
@@ -137,6 +138,7 @@
 <script src="../js/activities/deleteActivity.js"></script>
 <script src="../js/activities/updateActivity.js"></script>
 <script src="../js/activities/averageActivity.js"></script>
+<script src="../js/logout.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </html>
