--- a/public/views/Appointments.html
+++ b/public/views/Appointments.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="mb-4 pt-4 pb-4">
+    <header>
         <h1>Appointments</h1>
     </header>
     <nav>
@@ -21,6 +21,7 @@
             <li><a href="Appointments.html" class="active">Appointments</a></li>
             <li><a href="Activities.html">Activities</a></li>
             <li><a href="Medications.html">Medications</a></li>
+            <button id="logoutBtn">Log Out</button>
         </ul>
     </nav>
     <main>
@@ -204,7 +205,7 @@
 <script src="../js/main.js"></script>
 <script src="../js/appointments/addAppointment.js"></script>
 <script src="../js/appointments/getUserApps.js"></script>
-
+<script src="../js/logout.js"></script>
 <script src="../js/appointments/deleteAppointment.js"></script>
 <script src="../js/appointments/updateAppointment.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
