--- a/public/views/LogIn.html
+++ b/public/views/LogIn.html
@@ -56,6 +56,7 @@
     <footer><a href="contactus.html">Contact Us</a></footer>
     <script src="../js/main.js"></script>
     <script src="../js/login.js"></script>
+    <script src="../js/logout.js"></script>
 
 </body>
 
