display name on dashboards

--- a/public/views/providerDashboard.html
+++ b/public/views/providerDashboard.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <main>
-            <h2>Provider Dashboard</h2>
+            <h2>Provider Dashboard: <span id = "fullName"></span></h2>
             <div class="row">
                 <div class="col-md-4 col-sm-12 mx-auto">
                     <div class="card">
@@ -131,6 +131,7 @@
 
     <!-- <script src="../js/providerSearch.js"></script> -->
     <script src="../js/main.js"></script>
+    <script src= "../js/displayUser.js"></script>
     <script src="../js/logout.js"></script>
     <script src="../js/requests/provider/getMedications.js"></script>
     <script src="../js/requests/provider/getAppointments.js"></script>
