--- a/public/views/index.html
+++ b/public/views/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
         <main>
-            <h2>Patient Dashboard</h2>
+            <h2>Patient Dashboard: <span id = "fullName"></span></h2>
             <div class="row">
                 <div class="col-md-4 col-sm-12 mx-auto">
                     <div id="calendar" class="mb-5">
@@ -74,6 +74,7 @@
 </body>
 <footer><a href="contactus.html">Contact Us</a></footer>
 <script src="../js/main.js"></script>
+<script src= "../js/displayUser.js"></script>
 <script src="../js/logout.js"></script>
 <script src="../js/requests/patient/requestDecision.js"></script>
 <script src="../js/appointments/getUserApps.js"></script>
