title displays user name

--- a/public/views/Activities.html
+++ b/public/views/Activities.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <title>Activities</title>
+    <title>Activities: </title>
 </head>
 
 <body>
@@ -133,6 +133,7 @@
     <footer><a href="contactus.html">Contact Us</a></footer>
 </body>
 <script src="../js/main.js"></script>
+<script src= "../js/displayUser.js"></script>
 <script src="../js/activities/addActivity.js"></script>
 <script src="../js/activities/getUserAct.js"></script>
 <script src="../js/activities/deleteActivity.js"></script>
