--- a/public/views/Medications.html
+++ b/public/views/Medications.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <title>Medications</title>
+    <title>Medications: </title>
 </head>
 
 <body>
@@ -155,6 +155,7 @@
 
 </body>
 <script src="../js/main.js"></script>
+<script src= "../js/displayUser.js"></script>
 <script src="../js/logout.js"></script>
 <script src="../js/medications/addMedication.js"></script>
 <script src="../js/medications/getUserMed.js"></script>
