--- a/public/views/Appointments.html
+++ b/public/views/Appointments.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/main.css" />
     <!-- FullCalendar Core -->
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.js"></script>
-    <title>Appointments</title>
+    <title>Appointments: </title>
 </head>
 
 <body>
@@ -156,6 +156,7 @@
 <footer><a href="contactus.html">Contact Us</a></footer>
 
 <script src="../js/main.js"></script>
+<script src= "../js/displayUser.js"></script>
 <script src="../js/appointments/addAppointment.js"></script>
 <script src="../js/appointments/getUserApps.js"></script>
 <script src="../js/logout.js"></script>
