added buttons to cancel, close, and modified stop logic

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -62,7 +62,7 @@
                                         <th>Stop Sharing</th>
                                     </tr>
                                 </thead>
-                                <tbody id="accpetedBody">
+                                <tbody id="acceptedBody">
                                     <!--Dynamic Data Goes Here-->
                                 </tbody>
                             </table>
