--- a/public/views/providerDashboard.html
+++ b/public/views/providerDashboard.html
@@ -52,6 +52,7 @@
                                     <tr>
                                         <th>Patient Name</th>
                                         <th>Request Status</th>
+                                        <th>Cancel Request</th>
                                     </tr>
                                 </thead>
                                 <tbody id="tableBody">
@@ -70,6 +71,7 @@
                                     <tr>
                                         <th>Patient Name</th>
                                         <th>View Patient Record</th>
+                                        <th>Close Request</th>
                                     </tr>
                                 </thead>
                                 <tbody id="acceptedBody">
